# gpu-path-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  profiling.txt  project-config.yaml  vcpkg.json
App/: CMakeLists.txt
App/Include/: SceneViewerApp.hpp  TestApp.hpp
App/Include/App/: Controller.hpp  LayerKeys.hpp  SceneViewerApp.hpp
App/Include/App/CameraRecorder/: Events.hpp  Layer.hpp  Settings.hpp  Status.hpp
App/Include/App/PathTracer/: Events.hpp  Layer.hpp  Settings.hpp  Status.hpp
App/Include/App/SceneViewer/Domain/: AppModule.hpp
App/Include/App/Scripts/: CameraController.hpp  Layer.hpp
App/Include/App/Ui/: Events.hpp  Layer.hpp  SceneViewerApp.hpp  Utils.hpp
App/Include/Scripting/: CameraController.hpp
App/Source/: Main.cpp  SceneViewerApp.cpp  TestApp.cpp
App/Source/CameraRecorder/: Layer.cpp  Status.cpp
App/Source/PathTracer/: Layer.cpp  Status.cpp
App/Source/SceneViewer/Domain/: AppModule.cpp
App/Source/SceneViewer/Ui/: UiLayer.cpp  Utils.cpp
App/Source/Scripting/: CameraController.cpp
App/Source/Scripts/: CameraController.cpp  Layer.cpp
App/Source/Ui/: Layer.cpp  SceneViewerApp.cpp  Utils.cpp
Core/: CMakeLists.txt
Core/Include/: CudaHello.hpp  TestCore.hpp
Core/Include/App/: AppClient.hpp  AppContext.hpp  Application.hpp  Client.hpp  Context.hpp  ImGuiClient.hpp  Time.hpp  UiClient.hpp
Core/Include/Assets/: Asset.hpp  AssetManager.hpp  AssetStorage.hpp  Handle.hpp  Key.hpp  Manager.hpp  Storage.hpp  Types.hpp
Core/Include/Assets/IO/: MeshBuilder.hpp  ObjLoader.hpp  Types.hpp
Core/Include/Core/Assets/: Asset.hpp  Handle.hpp  Key.hpp  Manager.hpp  Storage.hpp  Types.hpp
Core/Include/Core/Capture/: MotionRecorder.hpp  Recording.hpp  Resampling.hpp  Sample.hpp  Types.hpp
Core/Include/Core/ECS/: Builder.hpp  BuilderRegistry.hpp  Context.hpp  Hierarchy.hpp  Scene.hpp  Transform.hpp
Core/Include/Core/Events/: Keyboard.hpp  Mouse.hpp  Router.hpp
Core/Include/Core/Import/: Image.hpp  ImageIO.hpp  ImageLoader.hpp  ImageUtils.hpp  Model.hpp  ObjLoader.hpp  Scene.hpp  SceneLoader.hpp  Shader.hpp  ShaderLoader.hpp
Core/Include/Core/Input/: State.hpp
Core/Include/Core/Project/: Config.hpp  Descriptor.hpp
Core/Include/Core/Runtime/: AppModule.hpp  Application.hpp  Context.hpp  ImGuiBackend.hpp  ImGuiClient.hpp  ImGuiLayer.hpp  Time.hpp  UiClient.hpp  UiLayer.hpp
Core/Include/Core/Scripts/: Binding.hpp  Callback.hpp  Catalog.hpp  Phase.hpp  Runner.hpp
Core/Include/Core/Utils/: Error.hpp  Hash.hpp  Path.hpp  Time.hpp  Yaml.hpp
Core/Include/Core/Window/: Attributes.hpp  GlfwCallbacks.hpp  GraphicsContext.hpp  NativeWindow.hpp
Core/Include/ECS/: Context.hpp  Scene.hpp
Core/Include/ECS/Components/: Camera.hpp  Graphics.hpp  Hierarchy.hpp  Transform.hpp
Core/Include/ECS/Resolvers/: Background.hpp  Camera.hpp  Light.hpp  Model.hpp  Resolver.hpp  SceneResolverRegistry.hpp  Transform.hpp
Core/Include/ECS/Systems/: Render.hpp  ScriptRunner.hpp  Transform.hpp
Core/Include/Error/: Error.hpp
Core/Include/Events/: CursorPositionEvent.hpp  Event.hpp  EventDispatcher.hpp  FrameBufferSizeEvent.hpp  KeyEvent.hpp  Keyboard.hpp  Mouse.hpp  MouseButtonEvent.hpp  Router.hpp  Window.hpp
Core/Include/Graphics/: Formats.hpp  Light.hpp  Material.hpp  MaterialDefaults.hpp  SceneRenderService.hpp  ShadingModel.hpp
Core/Include/Graphics/Cpu/: Resources.hpp
Core/Include/Graphics/Cuda/: Resources.hpp
Core/Include/Graphics/Gl/: DrawContext.hpp  DynamicTexture2D.hpp  Framebuffer.hpp  Material.hpp  Program.hpp  RenderSurface.hpp  RenderTarget.hpp  Renderer.hpp  Resources.hpp  Shader.hpp  ShaderProgram.hpp  ShaderType.hpp  VertexLayout.hpp
Core/Include/IO/: Image.hpp  ImageLoader.hpp  Model.hpp  ObjLoader.hpp  Scene.hpp  SceneLoader.hpp  Shader.hpp  ShaderLoader.hpp
Core/Include/Input/: State.hpp  Types.hpp
Core/Include/Project/: Project.hpp  ProjectConfig.hpp
Core/Include/Render/: Renderer.hpp
Core/Include/Scripts/: Binding.hpp  Callback.hpp  Catalog.hpp  Functions.hpp
Core/Include/Utils/: Guid.hpp  Hash.hpp  Hasher.hpp  Path.hpp  Text.hpp  Yaml.hpp
Core/Include/Utils/Math/: CoordinateSystem.hpp  TangentSpace.hpp
Core/Include/Window/: GLFWCallbacks.hpp  GraphicsContext.hpp  Window.hpp  WindowAttributes.hpp
Core/Source/: CudaHello.cu  TestCore.cpp
Core/Source/App/: Application.cpp  ImGuiClient.cpp  Time.cpp
Core/Source/Assets/: AssetManager.cpp  AssetStorage.cpp  Key.cpp  Manager.cpp
Core/Source/Assets/IO/: MeshBuilder.cpp  ObjLoader.cpp
Core/Source/Capture/: MotionRecorder.cpp  Recording.cpp  Resampling.cpp
Core/Source/ECS/: BuilderRegistry.cpp  Scene.cpp  Transform.cpp
Core/Source/ECS/Resolvers/: Background.cpp  Camera.cpp  Light.cpp  Model.cpp  SceneResolverRegistry.cpp  Transform.cpp
Core/Source/ECS/SceneNodes/: Background.cpp  BuilderRegistry.cpp  Camera.cpp  Light.cpp  Model.cpp  Transform.cpp
Core/Source/ECS/Systems/: Capture.cpp  Render.cpp  ScriptRunner.cpp  Transform.cpp
Core/Source/Events/: EventDispatcher.cpp
Core/Source/Graphics/: SceneRenderService.cpp
Core/Source/Graphics/Ecs/: Assets.cpp  Camera.cpp  Light.cpp  Render.cpp
Core/Source/Graphics/Gl/: DynamicTexture2D.cpp  Framebuffer.cpp  MultisampleTexture2D.cpp  Program.cpp  RenderTarget.cpp  Renderbuffer.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Texture2D.cpp  VertexLayout.cpp
Core/Source/Graphics/Services/: SceneRenderer.cpp
Core/Source/IO/: ImageLoader.cpp  ObjLoader.cpp  SceneLoader.cpp  ShaderLoader.cpp
Core/Source/Import/: ImageIO.cpp  ImageLoader.cpp  ImageUtils.cpp  ObjLoader.cpp  SceneLoader.cpp  ShaderLoader.cpp
Core/Source/Project/: Descriptor.cpp  Project.cpp
Core/Source/Render/: Renderer.cpp
Core/Source/Runtime/: Application.cpp  ImGuiBackend.cpp  ImGuiClient.cpp  ImGuiLayer.cpp  Time.cpp
Core/Source/Runtime/Layer/: CommandQueue.cpp  Stack.cpp
Core/Source/Scripts/: Catalog.cpp  Runner.cpp
Core/Source/Utils/: Path.cpp  Text.cpp  Yaml.cpp
Core/Source/Utils/Math/: TangentSpace.cpp
Core/Source/Window/: GLFWCallbacks.cpp  GraphicsContext.cpp  NativeWindow.cpp  Window.cpp
(+234 files in other folders)
